Initial version of Features List

--- a/Gather/app/src/main/AndroidManifest.xml
+++ b/Gather/app/src/main/AndroidManifest.xml
@@ -1,19 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gather" >
+    package="gather.com.gather" >
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_launcher_gather"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name=".CreateNewEvent"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:theme="@style/FullscreenTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".FeatureList"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_feature_list"
+            android:theme="@style/FullscreenTheme" >
+            <intent-filter>
+                <action android:name="gather.com.gather.FeatureList" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
