--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,9 +19,13 @@ android {
     }
 }
 
+repositories { mavenCentral() }
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.facebook.android:facebook-android-sdk:3.21.1';
+    compile 'org.twitter4j:twitter4j-core:4.0.2'
     compile 'com.google.android.gms:play-services:6.5.87'
 }
