--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,15 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
             android:name=".WelcomeActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -23,6 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".SignInActivity"
             android:label="@string/title_activity_sign_in"
@@ -33,6 +37,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="cop_4331c.gather.WelcomeActivity" />
         </activity>
+
         <activity
             android:name=".SignUpActivity"
             android:label="@string/title_activity_sign_up"
@@ -42,6 +47,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="cop_4331c.gather.WelcomeActivity" />
         </activity>
-    </application>
 
+        <activity
+            android:name=".PublishEventActivity"
+            android:label="@string/publishing_activity_title" >
+            <meta-data android:name="com.google.android.gms.version"
+                android:value="@integer/google_play_services_version" />
+        </activity>
+
+    </application>
 </manifest>
