Integrated Feature List with Social Media Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,5 +55,12 @@
                 android:value="@integer/google_play_services_version" />
         </activity>
 
+        <activity
+            android:name=".FeatureList"
+            android:label="@string/feature_list_title" >
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value="cop_4331c.gather.FeatureList" />
+        </activity>
+
     </application>
 </manifest>
