--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -17,12 +16,11 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.NoActionBar" >
         android:name=".GatherActivity">
-
         <activity
             android:name=".DispatchActivity"
-            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,9 +30,9 @@
         </activity>
         <activity
             android:name=".WelcomeActivity"
-            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar" >
         </activity>
         <activity
@@ -64,7 +62,30 @@
             android:name="com.spotify.sdk.android.authentication.LoginActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity android:name=".MainActivity" />
-
+        <activity
+            android:name=".ui.SearchForSongActivity"
+            android:label="@string/title_activity_search_for_song_playlist"
+            android:parentActivityName=".ui.HostMusicPlaylistHomeActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="cop_4331c.gather.ui.HostMusicPlaylistHomeActivity" />
+        </activity>
+        <activity
+            android:name=".ui.EditPlaylistActivity"
+            android:label="@string/title_activity_edit_playlist"
+            android:parentActivityName=".ui.HostMusicPlaylistHomeActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="cop_4331c.gather.ui.HostMusicPlaylistHomeActivity" />
+        </activity>
+        <activity
+            android:name=".ui.EditPlaylistsActivity"
+            android:label="@string/title_activity_edit_playlists"
+            android:parentActivityName=".ui.HostMusicPlaylistHomeActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="cop_4331c.gather.ui.HostMusicPlaylistHomeActivity" />
+        </activity>
     </application>
 
 </manifest>
