--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,10 @@ dependencies {
     compile files('libs/Parse-1.8.3.jar')
     compile 'com.parse.bolts:bolts-android:1.+'
     compile fileTree(dir: 'libs', include: 'Parse-*.jar')
+
+    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.facebook.android:facebook-android-sdk:3.21.1';
+    compile 'org.twitter4j:twitter4j-core:4.0.2'
+    compile 'com.google.android.gms:play-services:6.5.87'
 }
