--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,20 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="18" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="18" />
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
 
     <application
         android:name=".GatherActivity"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.AppCompat.NoActionBar" >
         <activity
             android:name=".DispatchActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -44,7 +47,7 @@
             android:name=".SignInActivity"
             android:label="@string/title_activity_sign_in"
             android:parentActivityName=".WelcomeActivity"
-            android:theme="@style/Theme.AppCompat"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
             android:windowSoftInputMode="adjustResize|stateVisible" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -54,7 +57,7 @@
             android:name=".SignUpActivity"
             android:label="@string/title_activity_sign_up"
             android:parentActivityName=".WelcomeActivity"
-            android:theme="@style/Theme.AppCompat" >
+            android:theme="@style/Theme.AppCompat.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="cop_4331c.gather.WelcomeActivity" />
@@ -62,17 +65,39 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/Theme.AppCompat.Light" >
+            android:theme="@style/Theme.AppCompat" >
         </activity>
-
         <activity
             android:name=".AccountInfoActivity"
             android:label="@string/title_activity_main"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/Theme.AppCompat.Light" >
+            android:theme="@style/Theme.AppCompat.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="cop_4331c.gather.MainActivity" />
+        </activity>
+        <activity
+            android:name=".new_features_list"
+            android:label="@string/title_activity_new_features_list"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="cop_4331c.gather.MainActivity" />
+        </activity>
+        <activity
+            android:name=".name_event"
+            android:label="@string/title_activity_name_event"
+            android:parentActivityName=".new_features_list"
+            android:theme="@style/Theme.AppCompat.NoActionBar" >
+            </activity>
+        <activity
+            android:name=".PublishEventActivity"
+            android:label="@string/publishing_activity_title"
+            android:parentActivityName=".new_features_list"
+            android:theme="@style/Theme.AppCompat.NoActionBar" >
+            <meta-data
+                android:name="com.google.android.gms.version"
+                android:value="@integer/google_play_services_version" />
         </activity>
     </application>
 
