--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,7 +89,7 @@
             android:label="@string/title_activity_name_event"
             android:parentActivityName=".new_features_list"
             android:theme="@style/Theme.AppCompat.NoActionBar" >
-            </activity>
+        </activity>
         <activity
             android:name=".PublishEventActivity"
             android:label="@string/publishing_activity_title"
@@ -98,6 +98,14 @@
             <meta-data
                 android:name="com.google.android.gms.version"
                 android:value="@integer/google_play_services_version" />
+        </activity>
+        <activity
+            android:name=".MessagingActivity"
+            android:label="@string/title_activity_messaging"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="cop_4331c.gather.MainActivity" />
         </activity>
     </application>
 
