--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,12 +28,25 @@ repositories {
 }
 
 dependencies {
-<<<<<<< HEAD
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:22.0.0'
-    compile 'com.android.support:recyclerview-v7:22.0.0'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:cardview-v7:21.0.3'
+    compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.android.support:recyclerview-v7:22.0.0'
     compile 'com.google.android.gms:play-services:6.5.87'
+    compile files('libs/Parse-1.8.3.jar')
+    compile 'com.parse.bolts:bolts-android:1.+'
+    compile fileTree(dir: 'libs', include: 'Parse-*.jar')
+    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.facebook.android:facebook-android-sdk:3.21.1'
+    compile 'org.twitter4j:twitter4j-core:4.0.2'
+    compile 'com.google.android.gms:play-services:6.5.87'
+    compile files('libs/sinch-android-rtc-3.6.0.jar')
+
+
+
+    //AJ stuff
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.2.0'
@@ -41,28 +54,7 @@ dependencies {
     compile 'com.google.guava:guava:18.0'
     compile files('libs/spotify-web-api-android-0.1.0.jar')
 
-    // This library handles authentication and authorization
+    // This library handles spotify authentication and authorization
     compile 'com.spotify.sdk:spotify-auth:1.0.0-beta9@aar'
-=======
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:cardview-v7:21.0.3'
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.android.support:support-v4:21.0.3'
-    compile 'com.google.android.gms:play-services:6.5.87'
->>>>>>> 41c57c17b1a4bdd7894d4964719b1ae52eda5d28
-    compile files('libs/Parse-1.8.3.jar')
 
-    //Parse
-    compile 'com.parse.bolts:bolts-android:1.+'
-    compile fileTree(dir: 'libs', include: 'Parse-*.jar')
-<<<<<<< HEAD
 }
-=======
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.android.support:support-v4:21.0.3'
-    compile 'com.facebook.android:facebook-android-sdk:3.21.1'
-    compile 'org.twitter4j:twitter4j-core:4.0.2'
-    compile 'com.google.android.gms:play-services:6.5.87'
-    compile files('libs/sinch-android-rtc-3.6.0.jar')
-}
->>>>>>> 41c57c17b1a4bdd7894d4964719b1ae52eda5d28
