--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,9 @@
         </activity>
         <activity
             android:name=".ui.HostMusicPlaylistHomeActivity"
-            android:label="@string/title_activity_host_music_playlist_home" >
+            android:label="@string/title_activity_host_music_playlist_home"
+            android:launchMode="singleInstance"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.spotify.sdk.android.authentication.LoginActivity"
@@ -65,7 +67,9 @@
         <activity
             android:name=".ui.SearchForSongActivity"
             android:label="@string/title_activity_search_for_song_playlist"
-            android:parentActivityName=".ui.HostMusicPlaylistHomeActivity" >
+            android:parentActivityName=".ui.HostMusicPlaylistHomeActivity"
+            android:launchMode="singleInstance"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="cop_4331c.gather.ui.HostMusicPlaylistHomeActivity" />
@@ -73,7 +77,9 @@
         <activity
             android:name=".ui.EditPlaylistsActivity"
             android:label="@string/title_activity_edit_playlists"
-            android:parentActivityName=".ui.HostMusicPlaylistHomeActivity" >
+            android:parentActivityName=".ui.HostMusicPlaylistHomeActivity"
+            android:launchMode="singleInstance"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="cop_4331c.gather.ui.HostMusicPlaylistHomeActivity" />
